test/types/coerce/bradc/int2uint.good
int2uint.chpl:10: error: Cannot assign to int(64) from uint(64)
